Set overflow:scroll; on outputs

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -203,6 +203,7 @@ td {
 {
     word-wrap: break-word;
     padding: 10px 10px 10px calc(var(--prompt-width) + 10px);
+    overflow: scroll;
 }
 
 .outputs>div:empty
