--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -425,9 +425,7 @@ li.CodeMirror-hint-active {
     opacity:  1.0;
     position: absolute;
     left: 8px;
-    border-color: rgba(122,122,122,0.3);
-    border-width: 1px;
-    border-style: solid;
+    border-style: none;
     padding: 10px;
     padding-top: 0px;
     padding-right: 0px;
@@ -454,13 +452,9 @@ li.CodeMirror-hint-active {
 }
 
 /*
-
-The following were written to help with the R kernel formatting
-
-We need to write something general for nested HTML like the R kernel does for
-data
-
-*/
+ * The following were written to help with the R kernel formatting. We need to
+ * write something general for nested HTML like the R kernel does for data
+ */
 
 dd {
     display: block;
