--- a/static/styles/theme-dark.css
+++ b/static/styles/theme-dark.css
@@ -43,4 +43,6 @@
   --cm-hint-color-active: var(--cm-color);
   --cm-hint-bg: var(--main-bg-color);
   --cm-hint-bg-active: var(--pager-bg);
+
+  --status-bar: #111;
 }
