fix(code-cell): add ability to unhide code cells
Closes #668

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -245,6 +245,10 @@ blockquote p {
     flex-direction: row;
 }
 
+.cell .input-container.invisible {
+    height: 34px;
+}
+
 .cell .prompt
 {
     font-family: monospace;
